.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Employee_Relations_Review__c.object
<CustomObject>
    <description>Used for confidential Employee Relations Reviews</description>
    <fields>
        <fullName>xcdhcm__Address__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Personal_L__r.xcdhcm__Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Agreed_actions__c</fullName>
        <label>Agreed actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>xcdhcm__Review_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absence</fullName>
                </value>
                <value>
                    <fullName>Against Colleague</fullName>
                </value>
                <value>
                    <fullName>Against Manager</fullName>
                </value>
                <value>
                    <fullName>Against Policy\Practice</fullName>
                </value>
                <value>
                    <fullName>Behaviour</fullName>
                </value>
                <value>
                    <fullName>Breach of CofC Policy</fullName>
                </value>
                <value>
                    <fullName>Breach of H&amp;S Policy</fullName>
                </value>
                <value>
                    <fullName>Breach of Policy/Procedure</fullName>
                </value>
                <value>
                    <fullName>Equal Pay</fullName>
                </value>
                <value>
                    <fullName>Flex Working Appeal</fullName>
                </value>
                <value>
                    <fullName>Fraud or Financial</fullName>
                </value>
                <value>
                    <fullName>Gross misconduct</fullName>
                </value>
                <value>
                    <fullName>Harassment/Bullying/Victimisation</fullName>
                </value>
                <value>
                    <fullName>Ill Health Retirement Application</fullName>
                </value>
                <value>
                    <fullName>Job Share</fullName>
                </value>
                <value>
                    <fullName>Long Term Absence</fullName>
                </value>
                <value>
                    <fullName>Misuse of Resources eg Internet</fullName>
                </value>
                <value>
                    <fullName>Occupational Health Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Poor Timekeeping</fullName>
                </value>
                <value>
                    <fullName>Probationary Appeal</fullName>
                </value>
                <value>
                    <fullName>Redundancy Appeal</fullName>
                </value>
                <value>
                    <fullName>Terms and Conditions</fullName>
                </value>
                <value>
                    <fullName>Unfair Dismissal</fullName>
                </value>
                <value>
                    <fullName>Work Performance</fullName>
                </value>
                <value>
                    <fullName>Whistleblowing Appeal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Days_open__c</fullName>
        <formula>if(
 xcdhcm__Review_completed__c &lt;&gt; null,
 xcdhcm__Review_completed__c -  xcdhcm__Review_started__c + 1,
 today() -  xcdhcm__Review_started__c + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Discussion_notes__c</fullName>
        <label>Discussion notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Employee Relations Reviews</relationshipLabel>
        <relationshipName>Employee_Relations_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_number__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Final_outcome__c</fullName>
        <label>Final outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compromise</fullName>
                </value>
                <value>
                    <fullName>Informal Action Taken</fullName>
                </value>
                <value>
                    <fullName>No action required</fullName>
                </value>
                <value>
                    <fullName>No action taken</fullName>
                </value>
                <value>
                    <fullName>No Interact action</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Overturned</fullName>
                </value>
                <value>
                    <fullName>Probation Extended</fullName>
                </value>
                <value>
                    <fullName>Probation Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Redundant</fullName>
                </value>
                <value>
                    <fullName>Referred to legal</fullName>
                </value>
                <value>
                    <fullName>Resigned In Process</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Stage 1 Warning</fullName>
                </value>
                <value>
                    <fullName>Stage 2 Warning</fullName>
                </value>
                <value>
                    <fullName>Stage 3 Warning</fullName>
                </value>
                <value>
                    <fullName>Stage 4 - Dismissal</fullName>
                </value>
                <value>
                    <fullName>Termination – non conduct</fullName>
                </value>
                <value>
                    <fullName>Upheld - Fully</fullName>
                </value>
                <value>
                    <fullName>Upheld - Not</fullName>
                </value>
                <value>
                    <fullName>Upheld - Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Follow_up_notes__c</fullName>
        <label>Follow up notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__HR_business_partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the HR Administrator responsible for Managing the case or review</description>
        <label>HR business partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.xcdhcm__UserRole__c</field>
                <operation>contains</operation>
                <value>Admin</value>
            </filterItems>
            <infoMessage>The HR business partner should be an Administrator.  Click Show all results to display other Profiles</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Relations_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Investigation_notes__c</fullName>
        <label>Investigation notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__P_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Lead_case_employee__c</fullName>
        <formula>xcdhcm__Employee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead case employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c  
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Related_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Where a case involves several Employees, designate on Employee&apos;s case as the Lead case and record it here</inlineHelpText>
        <label>Lead case</label>
        <referenceTo>xcdhcm__Employee_Relations_Review__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Employee_Relations_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_completed__c</fullName>
        <label>Review completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_started__c</fullName>
        <label>Review started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_type__c</fullName>
        <description>Be careful about changing this - stage is a dependant picklist</description>
        <label>Review type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Disciplinary</fullName>
                </value>
                <value>
                    <fullName>Grievance</fullName>
                </value>
                <value>
                    <fullName>Whistleblowing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Stage__c</fullName>
        <description>Linked to review type</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>xcdhcm__Review_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Issue raised by Manager</fullName>
                </value>
                <value>
                    <fullName>Placed on PIP</fullName>
                </value>
                <value>
                    <fullName>Moved to Disciplinary stage</fullName>
                </value>
                <value>
                    <fullName>PIP closed</fullName>
                </value>
                <value>
                    <fullName>Verbal warning</fullName>
                </value>
                <value>
                    <fullName>1st written warning</fullName>
                </value>
                <value>
                    <fullName>2nd written warning</fullName>
                </value>
                <value>
                    <fullName>Disciplinary hearing</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
                <value>
                    <fullName>Formal Grievance raised by Employee</fullName>
                </value>
                <value>
                    <fullName>Under investigation</fullName>
                </value>
                <value>
                    <fullName>Written outcome</fullName>
                </value>
                <value>
                    <fullName>Final decision</fullName>
                </value>
                <value>
                    <fullName>Issue raised by Employee</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Relations Review</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Relations Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>